syntax = "proto3";

option java_package = "sh.elizabeth.fedihome";
option java_multiple_files = true;

message AccountPushData {
  string push_public_key = 1;
  string push_private_key = 2;
  string push_server_key = 3;
  string push_auth_secret = 4;
  string push_account_id = 5;
  string push_endpoint = 6;
}

message Account {
  string access_token = 1;
  AccountPushData push_data = 2;
}

message Instance {
  string instance_type = 1;
  string app_id = 2;
  string app_secret = 3;
}

message InternalData {
  string last_login_instance = 1;
  string active_account = 2;
  map<string, Account> accounts = 3;
  map<string, Instance> instances = 4;
  string fcm_device_token = 5;
}
